--- a/movie-seat-booking/index.html
+++ b/movie-seat-booking/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="movie-container">
-        <label for="">Pick a movie</label>
-        <select name="" id="movie">
+        <label for="">Pick a movie:</label>
+        <select id="movie">
             <option value="10">Avengers: Endgame ($10)</option>
             <option value="12">Joker ($12)</option>
             <option value="8">Toy Story 4 ($8)</option>
@@ -19,19 +19,16 @@
 
     <ul class="showcase">
         <li>
-            <div class="seat">
-                <small>N/A</small>
-            </div>
+            <div class="seat"></div>
+            <small>N/A</small>
         </li>
         <li>
-            <div class="seat selected">
-                <small>Selected</small>
-            </div>
+            <div class="seat selected"></div>
+            <small>Selected</small>
         </li>
         <li>
-            <div class="seat occupied">
-                <small>Occupied</small>
-            </div>
+            <div class="seat occupied"></div>
+            <small>Occupied</small>
         </li>
     </ul>
 
@@ -99,7 +96,12 @@
         </div>
     </div>
 
-    <p class="text">You have selected <span id="count">0</span> for a price of $ <span id="total">0</span></p>
+    <p class="text">
+        You have selected <span id="count">0</span> for a price of $ 
+        <span id="total">0</span>
+    </p>
+
+
     <script src="script.js"></script>
 </body>
 </html>
